Fix `GET /payments
